// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-clearable soui-cascader-multiple"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-compressed-wrapper soui-cascader-multiple-result-wrapper soui-cascader-multiple-compressed-wrapper"
        >
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="jiangning"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                jiangning
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="yuhuatai"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                yuhuatai
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="nanjing"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                nanjing
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="jiangsu"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                jiangsu
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="feidong"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                feidong
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="hefei"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                hefei
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="anhui"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                anhui
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            style="position: absolute; z-index: -100; user-select: none; contain: layout;"
          >
            <div
              class="soui-tag-wrapper"
            >
              <span>
                +
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23ZM8.29289 8.29289C8.65338 7.93241 9.22061 7.90468 9.6129 8.2097L9.70711 8.29289L11.828 10.413L13.9497 8.29289C14.3403 7.90237 14.9734 7.90237 15.364 8.29289C15.7244 8.65338 15.7522 9.22061 15.4471 9.6129L15.364 9.70711L13.242 11.828L15.364 13.9497C15.7545 14.3403 15.7545 14.9734 15.364 15.364C15.0035 15.7244 14.4362 15.7522 14.044 15.4471L13.9497 15.364L11.828 13.242L9.70711 15.364C9.31658 15.7545 8.68342 15.7545 8.29289 15.364C7.93241 15.0035 7.90468 14.4362 8.2097 14.044L8.29289 13.9497L10.413 11.828L8.29289 9.70711C7.90237 9.31658 7.90237 8.68342 8.29289 8.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="soui-cascader-compressed-icon soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 32px; width: 632px;"
>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright soui-tag-disabled"
            data-soui-type="dark"
            title="jiangsu"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                jiangsu
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright soui-tag-disabled"
            data-soui-type="dark"
            title="nanjing"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                nanjing
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about filter 1`] = `
<div>
  <form
    class="soui-form soui-form-wrapper"
  >
    <div
      class="soui-form-item-wrapper"
      data-soui-status="default"
    >
      <div
        class="soui-form-item-label"
        style="width: 72px;"
      >
        高亮关键字
      </div>
      <div
        class="soui-form-item-control"
        data-soui-role="form-control"
      >
        <button
          class="soui-switch soui-switch-wrapper soui-switch-wrapper-checked"
          role="switch"
          type="button"
        >
          <input
            checked=""
            style="display: none;"
            tabindex="0"
            type="checkbox"
          />
          <div
            class="soui-switch-indicator"
            dir="ltr"
          />
          <div
            class="soui-switch-content"
          >
            <div
              class="soui-switch-text-padding"
            />
          </div>
        </button>
      </div>
    </div>
  </form>
  <div
    style="display: flex; gap: 32px;"
  >
    <div
      class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
      data-soui-input-border="true"
      dir="ltr"
      style="width: 300px;"
    >
      <div
        class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
      >
        <div
          class="soui-cascader-result"
        >
          <div
            class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
          >
            <input
              autocomplete="off"
              placeholder="Please select city"
              style="width: 100%;"
              value=""
            />
            <span
              class="soui-cascader-input-mirror"
            />
          </div>
        </div>
        <div
          class="soui-cascader-icon-wrapper"
        >
          <span
            class="soui-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
      data-soui-input-border="true"
      dir="ltr"
      style="width: 300px;"
    >
      <div
        class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
      >
        <div
          class="soui-cascader-result"
        >
          <div
            class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
          >
            <input
              autocomplete="off"
              placeholder="Please select city"
              style="width: 100%;"
              value=""
            />
            <span
              class="soui-cascader-input-mirror"
            />
          </div>
        </div>
        <div
          class="soui-cascader-icon-wrapper"
        >
          <span
            class="soui-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about final 1`] = `
<div>
  <div
    class="soui-form-item-wrapper"
    data-soui-status="default"
  >
    <div
      class="soui-form-item-label"
    >
      Single
    </div>
    <div
      class="soui-form-item-control"
      data-soui-role="form-control"
    >
      <div
        class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
        data-soui-input-border="true"
        dir="ltr"
      >
        <div
          class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <input
                autocomplete="off"
                style="width: 100%;"
                value=""
              />
              <span
                class="soui-cascader-input-mirror"
              />
            </div>
          </div>
          <div
            class="soui-cascader-icon-wrapper"
          >
            <span
              class="soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-form-item-wrapper"
    data-soui-status="default"
  >
    <div
      class="soui-form-item-label"
    >
      multiple
    </div>
    <div
      class="soui-form-item-control"
      data-soui-role="form-control"
    >
      <div
        class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
        data-soui-input-border="true"
        dir="ltr"
      >
        <div
          class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <input
                autocomplete="off"
                style="width: 100%;"
                value=""
              />
              <span
                class="soui-cascader-input-mirror"
              />
            </div>
          </div>
          <div
            class="soui-cascader-icon-wrapper"
          >
            <span
              class="soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about finalDismiss 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about hideTag 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about innerTitle 1`] = `
<div
  class="soui-gap soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-wrapper-inner-title soui-cascader-wrapper-small soui-cascader-clearable"
      data-soui-input-border="true"
      dir="ltr"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
      >
        <div
          class="soui-inner-title-wrapper soui-inner-title-wrapper-small"
        >
          <div
            class="soui-inner-title-title soui-inner-title-top"
          >
            Inner Title
          </div>
          <div
            class="soui-inner-title-place"
          >
            <div
              class="soui-inner-title-title"
            >
              Inner Title
            </div>
          </div>
          <div
            class="soui-inner-title-content"
          >
            <div
              class="soui-cascader-result"
            >
              <div
                class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
              >
                <span
                  class="soui-cascader-placeholder soui-cascader-ellipsis"
                >
                  <span>
                    Please select city
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="soui-cascader-icon-wrapper"
        >
          <span
            class="soui-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-wrapper-inner-title soui-cascader-clearable"
      data-soui-input-border="true"
      dir="ltr"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
      >
        <div
          class="soui-inner-title-wrapper"
        >
          <div
            class="soui-inner-title-title soui-inner-title-top"
          >
            Inner Title
          </div>
          <div
            class="soui-inner-title-place"
          >
            <div
              class="soui-inner-title-title"
            >
              Inner Title
            </div>
          </div>
          <div
            class="soui-inner-title-content"
          >
            <div
              class="soui-cascader-result"
            >
              <div
                class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
              >
                <span
                  class="soui-cascader-placeholder soui-cascader-ellipsis"
                >
                  <span>
                    Please select city
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="soui-cascader-icon-wrapper"
        >
          <span
            class="soui-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-wrapper-inner-title soui-cascader-wrapper-large soui-cascader-clearable"
      data-soui-input-border="true"
      dir="ltr"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
      >
        <div
          class="soui-inner-title-wrapper soui-inner-title-wrapper-large"
        >
          <div
            class="soui-inner-title-title soui-inner-title-top"
          >
            Inner Title
          </div>
          <div
            class="soui-inner-title-place"
          >
            <div
              class="soui-inner-title-title"
            >
              Inner Title
            </div>
          </div>
          <div
            class="soui-inner-title-content"
          >
            <div
              class="soui-cascader-result"
            >
              <div
                class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
              >
                <span
                  class="soui-cascader-placeholder soui-cascader-ellipsis"
                >
                  <span>
                    Please select city
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="soui-cascader-icon-wrapper"
        >
          <span
            class="soui-cascader-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about loader 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-radio-wrapper-small"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 0
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 1
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 2
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 3
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 4
      </span>
    </div>
  </div>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    >
      <div
        class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable soui-cascader-multiple"
        data-soui-input-border="true"
        dir="ltr"
        style="width: 300px;"
        tabindex="0"
      >
        <div
          class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <span
                class="soui-cascader-placeholder soui-cascader-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-icon-wrapper"
          >
            <span
              class="soui-cascader-compressed-icon soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <pre
      style="flex: 1; margin: 10px; background: rgb(29, 29, 29); color: rgb(148, 213, 252); border-radius: 4px; padding: 10px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <code
          style="color: rgb(93, 142, 78);"
        >
          <span>
            /
          </span>
          <span>
            /
          </span>
           DataItem[]
        </code>
      </div>
      <code
        style="color: rgb(117, 117, 117);"
      >
        no data
      </code>
    </pre>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about noRepeat 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-clearable soui-cascader-multiple"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-compressed-wrapper soui-cascader-multiple-result-wrapper soui-cascader-multiple-compressed-wrapper"
        >
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="jiangning"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                jiangning
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="yuhuatai"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                yuhuatai
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="nanjing"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                nanjing
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="jiangsu"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                jiangsu
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="feidong"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                feidong
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="hefei"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                hefei
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="anhui"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                anhui
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            style="position: absolute; z-index: -100; user-select: none; contain: layout;"
          >
            <div
              class="soui-tag-wrapper"
            >
              <span>
                +
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23ZM8.29289 8.29289C8.65338 7.93241 9.22061 7.90468 9.6129 8.2097L9.70711 8.29289L11.828 10.413L13.9497 8.29289C14.3403 7.90237 14.9734 7.90237 15.364 8.29289C15.7244 8.65338 15.7522 9.22061 15.4471 9.6129L15.364 9.70711L13.242 11.828L15.364 13.9497C15.7545 14.3403 15.7545 14.9734 15.364 15.364C15.0035 15.7244 14.4362 15.7522 14.044 15.4471L13.9497 15.364L11.828 13.242L9.70711 15.364C9.31658 15.7545 8.68342 15.7545 8.29289 15.364C7.93241 15.0035 7.90468 14.4362 8.2097 14.044L8.29289 13.9497L10.413 11.828L8.29289 9.70711C7.90237 9.31658 7.90237 8.68342 8.29289 8.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="soui-cascader-compressed-icon soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about renderResult 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about trigger 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            title="Unmatched: shanghai"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                Unmatched: shanghai
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about wide 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    dir="ltr"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
